--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -5,4 +5,84 @@ dashboard: "Dashboard"
 bookings: "Buchungen"
 profile: "Profil"
 logout: "Abmelden"
-login: "Anmelden"
+login: "Login"
+dashboard_title: "Dashboard"
+dashboard_header: "Dashboard"
+dashboard_welcome: "Willkommen"
+dashboard_description: "Verwalte hier deine Buchungen und Zeitpläne."
+bookings_count_this_month: "Anzahl der Buchungen in diesem Monat"
+table_date: "Datum"
+table_start_time: "Startzeit"
+table_end_time: "Endzeit"
+table_floor: "Stockwerk"
+table_room: "Raum"
+table_desk: "Tisch"
+no_bookings_yet: "Sie haben noch keine Buchungen."
+start_new_booking: "Neue Buchung starten"
+edit_profile_title: "Profil bearbeiten"
+edit_profile_header: "Profil bearbeiten"
+profile_picture: "Profilbild"
+first_name: "Vorname"
+last_name: "Nachname"
+email: "E-Mail"
+phone_number: "Telefonnummer"
+position: "Position"
+upload_profile_picture: "Profilbild hochladen"
+new_password: "Neues Passwort"
+confirm_password: "Passwort bestätigen"
+save: "Speichern"
+bookings_title: "Buchungen"
+make_booking_header: "Buchung vornehmen"
+date_label: "Datum"
+choose_date: "Datum wählen"
+booking_type: "Buchungstyp"
+office_day: "Bürotag"
+home_office_day: "Homeoffice-Tag"
+start_time: "Startzeit"
+end_time: "Endzeit"
+floor_label: "Stockwerk"
+floor_1: "1. Stock"
+floor_2: "2. Stock"
+room_label: "Raum"
+room_1: "Raum 1"
+room_2: "Raum 2"
+desk_label: "Tisch"
+desk_1: "Tisch 1"
+desk_2: "Tisch 2"
+desk_3: "Tisch 3"
+desk_4: "Tisch 4"
+complete_booking: "Buchung abschließen"
+booking_overview_title: "Buchungsübersicht"
+user_label: "Benutzer"
+email_label: "E-Mail"
+start_time_label: "Startzeit"
+end_time_label: "Endzeit"
+no_bookings_found: "Keine Buchungen gefunden"
+id_label: "ID"
+user_list_title: "Benutzerliste"
+user_list_header: "Benutzerliste"
+first_name_label: "Vorname"
+last_name_label: "Nachname"
+actions_label: "Aktionen"
+edit_label: "Bearbeiten"
+delete_label: "Löschen"
+confirm_delete_user: "Sind Sie sicher, dass Sie diesen Benutzer löschen möchten?"
+no_users_found: "Keine Benutzer gefunden."
+create_new_user_label: "Neuen Benutzer erstellen"
+create_user_title: "Neuen Benutzer erstellen"
+create_user_header: "Neuen Benutzer erstellen"
+password_label: "Passwort"
+create_button: "Erstellen"
+edit_user_title: "Benutzer bearbeiten"
+edit_user_header: "Benutzer bearbeiten"
+password_unchanged_hint: "Lassen Sie das Feld leer, um das Passwort nicht zu ändern."
+save_button: "Speichern"
+home_title: "Startseite"
+home_description: "Verwalten Sie Ihre Büro- und Homeoffice-Tage und reservieren Sie Ihren Arbeitsplatz."
+login_button: "Login"
+image_alt_text: "FlexDesk-Vorschau"
+login_title: "Login"
+login_header: "Login"
+login_email_username_label: "E-Mail oder Benutzername"
+login_password_label: "Passwort"
+
