--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -6,3 +6,84 @@ bookings: "Bookings"
 profile: "Profile"
 logout: "Logout"
 login: "Login"
+dashboard_title: "Dashboard"
+dashboard_header: "Dashboard"
+dashboard_welcome: "Welcome"
+dashboard_description: "Manage your bookings and schedule here."
+bookings_count_this_month: "Count of bookings this month"
+table_date: "Date"
+table_start_time: "Start Time"
+table_end_time: "End Time"
+table_floor: "Floor"
+table_room: "Room"
+table_desk: "Desk"
+no_bookings_yet: "You have no bookings yet."
+start_new_booking: "Start a new booking"
+edit_profile_title: "Edit Profile"
+edit_profile_header: "Edit Profile"
+profile_picture: "Profile Picture"
+first_name: "First Name"
+last_name: "Last Name"
+email: "E-Mail"
+phone_number: "Phone Number"
+position: "Position"
+upload_profile_picture: "Upload Profile Picture"
+new_password: "New Password"
+confirm_password: "Confirm Password"
+save: "Save"
+bookings_title: "Bookings"
+make_booking_header: "Make a Booking"
+date_label: "Date"
+choose_date: "Choose a Date"
+booking_type: "Booking Type"
+office_day: "Office Day"
+home_office_day: "Home Office Day"
+start_time: "Start Time"
+end_time: "End Time"
+floor_label: "Floor"
+floor_1: "1st Floor"
+floor_2: "2nd Floor"
+room_label: "Room"
+room_1: "Room 1"
+room_2: "Room 2"
+desk_label: "Desk"
+desk_1: "Desk 1"
+desk_2: "Desk 2"
+desk_3: "Desk 3"
+desk_4: "Desk 4"
+complete_booking: "Complete Booking"
+booking_overview_title: "Booking Overview"
+user_label: "User"
+start_time_label: "Start Time"
+end_time_label: "End Time"
+no_bookings_found: "No bookings found"
+user_list_title: "User List"
+user_list_header: "User List"
+id_label: "ID"
+first_name_label: "First Name"
+last_name_label: "Last Name"
+email_label: "E-Mail"
+actions_label: "Actions"
+edit_label: "Edit"
+delete_label: "Delete"
+confirm_delete_user: "Are you sure you want to delete this user?"
+no_users_found: "No users found."
+create_new_user_label: "Create new user"
+create_user_title: "Create New User"
+create_user_header: "Create New User"
+password_label: "Password"
+create_button: "Create"
+edit_user_title: "Edit User"
+edit_user_header: "Edit User"
+password_unchanged_hint: "Leave the field empty to keep the password unchanged."
+save_button: "Save"
+home_title: "Home"
+home_description: "Manage your office and home office days and reserve your workspace."
+login_button: "Login"
+image_alt_text: "FlexDesk Preview"
+login_title: "Login"
+login_header: "Login"
+login_email_username_label: "E-Mail or Username"
+login_password_label: "Password"
+
+
